# AdventOfCode

./: .gitattributes  .gitignore  README.md  day01.coffee  day01.py  day01_golf.py  day02.py  day03.py  day04.py  day05.py  day1.coffee  day1_golfed.py  day2.py  init.py  pyproject.toml
2021/01/: solution.coffee  solution.py  solution_golf.py
2021/02/: solution.py
2021/03/: solution.py
2021/04/: solution.py
2021/05/: solution.py
2021/07/: solution.py
2021/08/: solution.py
2021/09/: solution.py
2021/10/: solution.py
2021/11/: solution.py
2021/13/: solution.py
2021/15/: solution.py
2021/16/: solution.py
2021/17/: solution.py
2021/18/: solution.py
2021/20/: solution.py
2021/22/: solution.py
2021/day03/: solution.py
2021/day04/: solution.py
2021/day14/: solution.py
2021/day17/: solution.py
2021/day21/: solution.py
2022/01/: solution.py
2022/02/: solution.py
2022/03/: solution.py
2022/06/: solution.py
2022/07/: solution.py
2022/08/: solution.py
2022/09/: solution.py
2022/10/: solution.py
2022/11/: solution.py
2022/12/: solution.py
2022/13/: solution.py
2022/14/: solution.py
2022/15/: solution.py
2022/16/: solution.py
2022/18/: solution.py
2022/day01/: solution.py
day02/: solution.py
day05/: solution.py
day06/: solution.py
day07/: solution.py
day08/: solution.py
day09/: solution.py
day10/: solution.py
day11/: solution.py
day12/: solution.py
day15/: solution.py
day16/: solution.py
day18/: solution.py
day20/: solution.py
day22/: solution.py
day25/: solution.py
utils/: utils.py
(+68 files in other folders)
