[project]
name = "adventofcode"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "ruff>=0.14.7",
]

[project.scripts]
aoc = "init:main"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select =  ["E", "F", "I", "N", "W"]
ignore = [
    "E701", # multiple statements on one line, if bar: return foo
    "E741", # ambiguous variable name 'l', nice in some cases
    "E731", # do not assign a lambda expression, i was crazy once stop complaining
]
